--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
     <ul class="carousel-items">
         <li class="carousel-item">
             <div class="card">
-                
+
                 <img class="Image" src="assets/model.JPG" />
-                <h2 class="card-title"><a href="#trainingDay" class="buttoncarousel"><img src="assets/flèche.png"></a>Training Day: La meilleure façon de se préparer</h2>
+                <h2 class="card-title"><a href="#trainingDay" class="buttoncarousel"><img
+                            src="assets/flèche.png"></a>Training Day: La meilleure façon de se préparer</h2>
                 <div class="card-content">
                 </div>
             </div>
@@ -40,16 +41,18 @@
         <li class="carousel-item">
             <div class="card">
                 <img class="Image" src="assets/workimg.jpg" />
-                <h2 class="card-title"> <a href="#work" class="buttoncarousel"><img src="assets/flèche.png"></a>Work: Le starter pack du Wilder</h2>
+                <h2 class="card-title"> <a href="#work" class="buttoncarousel"><img src="assets/flèche.png"></a>Work: Le
+                    starter pack du Wilder</h2>
                 <div class="card-content">
-                    
+
                 </div>
             </div>
         </li>
         <li class="carousel-item">
             <div class="card">
                 <img class="Image" src="assets/crane.jpg" />
-                <h2 class="card-title"><a href="#stories" class="buttoncarousel"><img src="assets/flèche.png"></a>Coiffure Lifestyle et Esthétique by Jessy</h2>
+                <h2 class="card-title"><a href="#stories" class="buttoncarousel"><img
+                            src="assets/flèche.png"></a>Coiffure Lifestyle et Esthétique by Jessy</h2>
                 <div class="card-content">
                 </div>
             </div>
@@ -57,17 +60,18 @@
         <li class="carousel-item">
             <div class="card">
                 <img class="Image" src="assets/reveil.jpg" />
-                <h2 class="card-title"><a href="#morning" class="buttoncarousel"><img src="assets/flèche.png"></a>Morning routine Mounir</h2>
+                <h2 class="card-title"><a href="#morning" class="buttoncarousel"><img
+                            src="assets/flèche.png"></a>Morning routine Mounir</h2>
                 <div class="card-content">
                 </div>
             </div>
-        </li>       
+        </li>
     </ul>
 </section>
 
 
 
-  <details id="trainingDayDetails">
+<details id="trainingDayDetails">
 
     <summary id="trainingDay">
         <img class="firstdayimg" src="assets/model.jpg" alt="Image d'illustration d'article">
