changement non definitif

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
             <div class="card">
 
                 <img class="Image" src="assets/model.JPG" />
-                <h2 class="card-title"><a href="#trainingDay" class="buttoncarousel"><img
-                            src="assets/flèche.png"></a>Training Day: La meilleure façon de se préparer</h2>
+                <h2 class="card-title"><a href="#trainingDay" class="buttoncarousel"><img src="assets/flèche.png"></a>Training Day: La meilleure façon de se préparer</h2>
                 <div class="card-content">
                 </div>
             </div>
@@ -41,8 +40,7 @@
         <li class="carousel-item">
             <div class="card">
                 <img class="Image" src="assets/workimg.jpg" />
-                <h2 class="card-title"> <a href="#work" class="buttoncarousel"><img src="assets/flèche.png"></a>Work: Le
-                    starter pack du Wilder</h2>
+                <h2 class="card-title"> <a href="#work" class="buttoncarousel"><img src="assets/flèche.png"></a>Work: Le starter pack du Wilder</h2>
                 <div class="card-content">
 
                 </div>
@@ -51,8 +49,7 @@
         <li class="carousel-item">
             <div class="card">
                 <img class="Image" src="assets/crane.jpg" />
-                <h2 class="card-title"><a href="#stories" class="buttoncarousel"><img
-                            src="assets/flèche.png"></a>Coiffure Lifestyle et Esthétique by Jessy</h2>
+                <h2 class="card-title"><a href="#stories" class="buttoncarousel"><img src="assets/flèche.png"></a>Coiffure Lifestyle et Esthétique by Jessy</h2>
                 <div class="card-content">
                 </div>
             </div>
@@ -60,8 +57,7 @@
         <li class="carousel-item">
             <div class="card">
                 <img class="Image" src="assets/reveil.jpg" />
-                <h2 class="card-title"><a href="#morning" class="buttoncarousel"><img
-                            src="assets/flèche.png"></a>Morning routine Mounir</h2>
+                <h2 class="card-title"><a href="#morning" class="buttoncarousel"><i class="fa-solid fa-angle-right"></i></a>Morning routine de Mounir</h2>
                 <div class="card-content">
                 </div>
             </div>
@@ -179,11 +175,11 @@
     </p>
 </details>
 
-<details id=" morning">
+<details id="morning">
     <summary>
         <img class="articleimg" src="assets/reveil.jpg" alt="Image d'illustration d'article">
         <h3>
-            Morning routine Mounir
+            Morning routine de Mounir
         </h3>
         <i class="fa-solid fa-angle-right"></i>
         <i class="fa-solid fa-chevron-down"></i>
