--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <div class="card">
 
                 <img class="Image" src="assets/model.JPG" />
-                <h2 class="card-title"><a href="#trainingDay" class="buttoncarousel"><img src="assets/flèche.png"></a>Training Day: La meilleure façon de se préparer</h2>
+                <h2 class="card-title"><a href="#trainingDay" class="buttoncarousel"><img
+                            src="assets/flèche.png"></a>Training Day: La meilleure façon de se préparer</h2>
                 <div class="card-content">
                 </div>
             </div>
@@ -40,7 +41,8 @@
         <li class="carousel-item">
             <div class="card">
                 <img class="Image" src="assets/workimg.jpg" />
-                <h2 class="card-title"> <a href="#work" class="buttoncarousel"><img src="assets/flèche.png"></a>Work: Le starter pack du Wilder</h2>
+                <h2 class="card-title"> <a href="#work" class="buttoncarousel"><img src="assets/flèche.png"></a>Work: Le
+                    starter pack du Wilder</h2>
                 <div class="card-content">
 
                 </div>
@@ -49,7 +51,8 @@
         <li class="carousel-item">
             <div class="card">
                 <img class="Image" src="assets/crane.jpg" />
-                <h2 class="card-title"><a href="#stories" class="buttoncarousel"><img src="assets/flèche.png"></a>Coiffure Lifestyle et Esthétique by Jessy</h2>
+                <h2 class="card-title"><a href="#stories" class="buttoncarousel"><img
+                            src="assets/flèche.png"></a>Coiffure Lifestyle et Esthétique by Jessy</h2>
                 <div class="card-content">
                 </div>
             </div>
@@ -57,7 +60,8 @@
         <li class="carousel-item">
             <div class="card">
                 <img class="Image" src="assets/reveil.jpg" />
-                <h2 class="card-title"><a href="#morning" class="buttoncarousel"><i class="fa-solid fa-angle-right"></i></a>Morning routine de Mounir</h2>
+                <h2 class="card-title"><a href="#morning" class="buttoncarousel"><img
+                            src="assets/flèche.png"></i></a>Morning routine de Mounir</h2>
                 <div class="card-content">
                 </div>
             </div>
