ajout manette cliquable plus début du lien pour le jeu

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <img id="logo" src="assets/WCS_logo.png" alt="Logo The Wild Post">
     <h1>The Wild Post</h1>
 
-    <button id="boutonLoupe"><img id="loupe" src="assets/console.png" alt="Bouton de recherche"> </button>
+    <button id="boutonLoupe"><img id="loupe" src="assets/console.png" alt="Bouton de recherche"><a href=""></a> </button>
 </header>
 
 
