--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     <title>The Wild Post</title>
 </head>
 <header>
-    <img id="logo" src="assets/WCS_logo.png" alt="Logo The Wild Post">
+    <a href="#"><img id="logo" src="assets/WCS_logo.png" alt="Logo The Wild Post"></a>
     <h1>The Wild Post</h1>
 
-    <button id="boutonLoupe"><img id="loupe" src="assets/console.png" alt="Bouton de recherche"><a href=""></a> </button>
+    <a id="boutonLoupe" href="Clicker-game/game.html"><img id="loupe" src="assets/console.png"
+            alt="Bouton de recherche"></a>
 </header>
 
 
