--- a/index.html
+++ b/index.html
@@ -95,10 +95,19 @@
 
         <strong>2.Règles de vie à la WildCodeSchool (résumé quêtes onboarding)</strong><br>
         <br>
-
+        Deux valeurs fortes à la wild : bienveillance et entraide le tout sans chaussures. Le matin stand up 
+        où chacun donne son mood du jour et le programme qu’il s’est fixé pour la journée à venir. suivent les quêtes, 
+        et les cours. Pause. Caresse au chat (lili), quête. L’après-midi quêtes / ateliers / cours. Caresse au chat. 
+        Viennent s’ajouter au fil de semaines des projets pour fixer les acquis et maîtriser le travail en équipe.<br>
+        <br>
 
 
         <strong>3.Choix des chaussons / chaussettes.</strong><br>
+        <br>
+        Un large choix s’offre au futur wilder. Faut-il privilégier le style au confort, les couleurs à la sobriété, 
+        ou bien tout simplement la bienséance? Un choix plus ardu qu’il n’y paraît.  Nous avons consulté Robin pour lui, 
+        le choix est clair : le style avant tout. Il y a les claquettes qui jouent la carte du minimalisme casual chic. 
+        Mais N’oublions pas la charentaise des familles qui font malgré tout de la résistance.
     </p>
 
 </details>
