nouvelle interview JUstine

--- a/index.html
+++ b/index.html
@@ -242,6 +242,80 @@
 
 </details>
 
+<details id="workDetails">
+    <summary id="work">
+        <img class="articleimg" src="assets/workimg.jpg" alt="Image d'illustration d'article">
+        <h3>
+            Interview Justine
+        </h3>
+        <i class="fa-solid fa-angle-right"></i>
+        <i class="fa-solid fa-chevron-down"></i>
+    </summary>
+    <p><strong>Avant de travailler dans l’IT tu faisais quoi?</strong><br>
+
+        J’étais assistante d’éducation et je préparais mon capes histoire en parallèle. J’ai quitté l’éducation nationale 
+        lorsque je me suis rendu compte qu’elle ne répondrait pas à mes aspirations personnelles. Ensuite je me suis lancée dans 
+        une activité de décoratrice d’intérieur, le covid est arrivé et le projet n’a pas pris.<br>
+        <br>
+        <strong>Comment en es-tu venue au développement web ?</strong><br>
+
+        J’ai travaillé avec des logiciels 3d de conception d’intérieur et j’ai crée mon site pro de décoratrice d’intérieur avec 
+        un interface no-code. Cette étape m’a passionné. Lorsque Pôle emploi m’a sollicité pour une formation en développement web, 
+        j’ai sauté sur l’occasion. J’ai suivi une formation dev web mais pas à la Wild. (un long silence pesant s’abat sur l’interview).<br>
+        <br>
+        <strong>Question plus sérieuse, Comment as-tu vécu l’intrusion de JS dans ta vie? Suis-tu un traitement pour ça?</strong><br>
+
+        JS très bien vécu, j’aime beaucoup ce langage. Par contre PHP, c’est une relation plus difficile. Je ne lui parle pas, 
+        et lui ne me parle pas non plus. Nous en sommes là lui est moi.<br>
+        <br>
+
+        <strong>Plutôt windows ou linux?</strong><br>
+
+        Polyamoureuse. Actuellement sur Windows, j’aime beaucoup linux. Je ne sais pas comment faire pour choisir sans blesser personne.<br>
+        <br>
+        
+        <strong>Quel wilder tu trouves le plus insupportable</strong><br>
+
+        L’interviewer :) T’avais pas à poser cette question.<br>
+        <br>
+
+        <strong>Quelle est ta vision du taff de développeur web à l’avenir, en particulier concernant les outils no ou low code de plus en plus pointus ?</strong><br>
+
+        On peut avoir des craintes lorsque l’on commence. Je les ai eues et je sais que vous pouvez les avoir, 
+        mais je pense qu’il faut voir les choses un peu différemment.
+        Ces outils permettent aux dev de gagner du temps sur des tâches à faible valeur ajoutée et leur permettent de se concentrer 
+        sur des tâches trop complexes pour pouvoir être traitées par ces outils no et low code.<br>
+        <br>
+
+        <strong>A ton sens quelles qualités/skills sont les plus importantes pour un dev ?</strong><br>
+
+        Le plus important selon moi est la curiosité essentielle à la veille techno, savoir chercher les infos utiles 
+        au métier et la souplesse dans l’apprentissage.
+ 
+        En ce qui concerne la veille, il ne s’agit pas d’apprendre pour apprendre, mais bien cibler les domaines qui nous plaisent, 
+        nous passionnent. Ainsi la veille est efficace et efficiente.
+ 
+        Pour la souplesse dans l’apprentissage, l’évolution des différents langages est si rapide qu’il faut continuellement se former. 
+        J’en veux pour preuve le cobol qui n’a cessé d’évoluer depuis sa création en 1875.<br>
+        <br>
+
+        <strong>Un seul conseil à nous donner :</strong><br>
+
+        Rester curieux et demander quand on a besoin. <br>
+        <br>
+
+        <strong>Ça fait deux ans non ?</strong><br>
+
+        Non. Tu as dû mal compter.<br>
+        <br>
+        
+        <strong>Sinon, pour finir, quel est le secret de Romain ? Tu sais, toi ?</strong><br>
+
+        Je ne souhaite pas répondre à cette question …<br>
+        <br>
+    </p>
+</details>
+
 <footer>
     <a href="#trainingDay" class="boutonFooter" onClick="openDetail(closest)"><img src="assets/firstday.png"
             alt="Bouton footer"></a>
