ajout balise br dans l'interview de Jessy

--- a/index.html
+++ b/index.html
@@ -167,21 +167,21 @@
         <strong>Peux tu nous dire pourquoi ta chevelure revêt autant d’importance pour toi?</strong><br>
         Les cheveux c’est la vie ! J’aime sentir mes cheveux battre mon visage lorsque je chevauche ma trottinette
         pour
-        aller à la wild. Dans ces moments je me dis que la vie est belle.
+        aller à la wild. Dans ces moments je me dis que la vie est belle.<br>
         <br>
         <strong>Combien de temps mets-tu pour entretenir ces magnifiques cheveux?</strong><br>
         On ne va pas se mentir, on n’a rien sans rien. J’ai adopté une méthode quasi-militaire. Tous les jours
         shampooing, après-shampooing, masques, rinçage à l’eau osmosée. Puis selon mes humeurs, soit je les laisse
         avec
         un effet coiffé/décoiffé, ou plus structurés avec de la cire coiffante. Parfois même je me les lisse. C’est
-        beaucoup de temps mais le résultat en vaut la peine non? … non?...
+        beaucoup de temps mais le résultat en vaut la peine non? … non?...<br>
         <br>
 
         <strong>C’est sûr… D’ailleurs avec d’aussi beaux cheveux, tu dois attiser les jalousies, non?</strong><br>
         Oh, avec le temps j’ai appris à les ignorer. Tenez, pas plus tard qu’hier H***, wilder m’a carrément dit que
         je
         devrais me raser les cheveux. Quelques années plus tôt je me serais énervé, mais avec le temps j’ai appris à
-        laisser couler.
+        laisser couler.<br>
         <br>
 
         <strong>Sinon des conseils capillaires pour nos lecteurs?</strong><br>
