dernière interview Romain

--- a/index.html
+++ b/index.html
@@ -315,6 +315,90 @@
         <br>
     </p>
 </details>
+<details id="workDetails">
+    <summary id="work">
+        <img class="articleimg" src="assets/workimg.jpg" alt="Image d'illustration d'article">
+        <h3>
+            Interview Romain
+        </h3>
+        <i class="fa-solid fa-angle-right"></i>
+        <i class="fa-solid fa-chevron-down"></i>
+    </summary>
+    <p><strong>Comment t’es venu l’amour du code ?</strong><br>
+
+        Un peu par hasard, à la sortie du lycée. Je me suis posé des questions quant à mon orientation future, 
+        et le code s’est invité sans que je puisse dire précisément comment.<br>
+        <br>
+
+        <strong>Comment es-tu devenu formateur à la WildCodeSchool ?</strong><br>
+
+        Après avoir bossé à la faculté côté logiciel et en tant que dev dans une start-up, j’ai commencé la formation chez la concurrence. 
+        Un poste s’est ouvert il y a 4 ans à l’ouverture du campus de la wild à Reims et j’y use mes chaussettes depuis.<br>
+        <br>
+
+        <strong>Tu dis avoir bossé côté logiciel, tu parles de C# ?</strong><br>
+
+        Je ne veux pas être insultant, je ne répondrai pas à cet affont.<br>
+        <br>
+
+        <strong>Quel est ton langage de prédilection ?</strong><br>
+
+        Au début de ma carrière j’étais plus orienté logiciel. Et puis je me suis penché sur le web, 
+        en particulier JS qui m’a donné du fil à retordre au début, mais qui me plaît particulièrement dans JS c’est sa logique légèrement 
+        différente des autres et sa polyvalence, mais on pourrait dire ça d’à peu près tous les langages. Mais JS est mieux.<br>
+        <br>
+        
+        <strong>Pourquoi c’est mieux ?</strong><br>
+
+        C’est mieux c’est tout.<br>
+        <br>
+
+        <strong>X Niel a dit un jour s’être mis au code parce que lorsqu’il donnait des ordres aux humains ils ne l’écoutaient pas. Ça t’inspire quoi ?</strong><br>
+
+        C’est vrai que les ordinateurs écoutent beaucoup mieux que les humains.<br>
+        <br>
+
+        <strong>Les mac aussi ?</strong><br>
+
+        Les mac aussi ?<br>
+        <br>
+
+        <strong>As-tu des projets en parallèle de la wild ?</strong><br>
+
+        Oui je suis un fidèle du Hacktober fest. J’ai actuellement un projet de classement de joueurs d’échecs et de notation de jeux de société.<br>
+        <br>
+
+        <strong>Tu joues aux échecs ?</strong><br>
+
+        Non, je préfère le jeu de go. Les règles sont beaucoup plus simples.<br>
+        <br>
+        
+        <strong>Quel wilder est le plus insupportable?</strong><br>
+
+        Le 3eme de la ligne à la session d’il y a 2 ans .<br>
+        <br>
+
+        <strong>Peux-tu nous parler des raccourcis clavier mac ?</strong><br>
+
+        Je pourrais mais je préfère rester poli.<br>
+        <br>
+
+        <strong>Un conseil à nous donner pour la sortie de la formation ?</strong><br>
+
+        Vous accrocher et persévérer. Garder la motivation et toujours s’exercer. Etre dev junior dans une boite n’est pas facile, et il faut tenir bon.<br>
+        <br>
+
+        <strong>Ça fait plusieurs, non ?</strong><br>
+
+        Non, relis bien ma réponse.<br>
+        <br>
+
+        <strong>Quel est ton secret ?</strong><br>
+
+        Je ne le vous dirai jamais<br>
+        <br>
+    </p>
+</details>
 
 <footer>
     <a href="#trainingDay" class="boutonFooter" onClick="openDetail(closest)"><img src="assets/firstday.png"
