--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
 <details id="workDetails">
     <summary id="work">
-        <img class="articleimg" src="assets/workimg.jpg" alt="Image d'illustration d'article">
+        <img class="articleimg" src="assets/Interview_Radio_4_(6840565867).jpeg" alt="Image d'illustration d'article">
         <h3>
             Interview Justine
         </h3>
