--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 </details>
 <details id="workDetails">
     <summary id="work">
-        <img class="articleimg" src="assets/workimg.jpg" alt="Image d'illustration d'article">
+        <img class="articleimg" src="assets/Interview_Radio_4_(6840565867).jpeg" alt="Image d'illustration d'article">
         <h3>
             Interview Romain
         </h3>
