ajout de dernière minute (date/auteurs)

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <h2>Training Day: La meilleure façon de se préparer</h2>
         <i class="fa-solid fa-angle-right"></i>
         <i class="fa-solid fa-chevron-down"></i>
+        <p class="credits"> Alexis durin - 06/10/2022</p>
 
     </summary>
     <p>
@@ -96,18 +97,18 @@
 
         <strong>2.Règles de vie à la WildCodeSchool (résumé quêtes onboarding)</strong><br>
         <br>
-        Deux valeurs fortes à la wild : bienveillance et entraide le tout sans chaussures. Le matin stand up 
-        où chacun donne son mood du jour et le programme qu’il s’est fixé pour la journée à venir. suivent les quêtes, 
-        et les cours. Pause. Caresse au chat (lili), quête. L’après-midi quêtes / ateliers / cours. Caresse au chat. 
+        Deux valeurs fortes à la wild : bienveillance et entraide le tout sans chaussures. Le matin stand up
+        où chacun donne son mood du jour et le programme qu’il s’est fixé pour la journée à venir. suivent les quêtes,
+        et les cours. Pause. Caresse au chat (lili), quête. L’après-midi quêtes / ateliers / cours. Caresse au chat.
         Viennent s’ajouter au fil de semaines des projets pour fixer les acquis et maîtriser le travail en équipe.<br>
         <br>
 
 
         <strong>3.Choix des chaussons / chaussettes.</strong><br>
         <br>
-        Un large choix s’offre au futur wilder. Faut-il privilégier le style au confort, les couleurs à la sobriété, 
-        ou bien tout simplement la bienséance? Un choix plus ardu qu’il n’y paraît.  Nous avons consulté Robin pour lui, 
-        le choix est clair : le style avant tout. Il y a les claquettes qui jouent la carte du minimalisme casual chic. 
+        Un large choix s’offre au futur wilder. Faut-il privilégier le style au confort, les couleurs à la sobriété,
+        ou bien tout simplement la bienséance? Un choix plus ardu qu’il n’y paraît. Nous avons consulté Robin pour lui,
+        le choix est clair : le style avant tout. Il y a les claquettes qui jouent la carte du minimalisme casual chic.
         Mais N’oublions pas la charentaise des familles qui font malgré tout de la résistance.
     </p>
 
@@ -120,6 +121,8 @@
         </h3>
         <i class="fa-solid fa-angle-right"></i>
         <i class="fa-solid fa-chevron-down"></i>
+        <p class="credits"> Olivier Nou - 06/10/2022</p>
+
     </summary>
     <p><strong>Odyssey</strong><br>
 
@@ -154,6 +157,8 @@
         </h3>
         <i class="fa-solid fa-angle-right"></i>
         <i class="fa-solid fa-chevron-down"></i>
+        <p class="credits"> Rémi Lagreze - 06/10/2022</p>
+
     </summary>
 
     <p><strong>Bonjour Jessy…</strong><br>
@@ -197,6 +202,8 @@
         </h3>
         <i class="fa-solid fa-angle-right"></i>
         <i class="fa-solid fa-chevron-down"></i>
+        <p class="credits"> Lucie Froissart - 06/10/2022</p>
+
     </summary>
     <p><strong>A la rédaction nous nous sommes posés des questions autour des routines matinales des wilders.
             Un profil a retenu notre attention.</strong><br>
@@ -225,6 +232,8 @@
         </h3>
         <i class="fa-solid fa-angle-right"></i>
         <i class="fa-solid fa-chevron-down"></i>
+        <p class="credits"> Olivier Nou - 06/10/2022</p>
+
     </summary>
 
     <p>Au détour d’une promenade pour aller humer l’air extérieur, nous avons croisé deux wilders au détour d’une
@@ -250,52 +259,66 @@
         </h3>
         <i class="fa-solid fa-angle-right"></i>
         <i class="fa-solid fa-chevron-down"></i>
+        <p class="credits"> Edouard Tractere - 06/10/2022</p>
+
     </summary>
     <p><strong>Avant de travailler dans l’IT tu faisais quoi?</strong><br>
 
-        J’étais assistante d’éducation et je préparais mon capes histoire en parallèle. J’ai quitté l’éducation nationale 
-        lorsque je me suis rendu compte qu’elle ne répondrait pas à mes aspirations personnelles. Ensuite je me suis lancée dans 
+        J’étais assistante d’éducation et je préparais mon capes histoire en parallèle. J’ai quitté l’éducation
+        nationale
+        lorsque je me suis rendu compte qu’elle ne répondrait pas à mes aspirations personnelles. Ensuite je me suis
+        lancée dans
         une activité de décoratrice d’intérieur, le covid est arrivé et le projet n’a pas pris.<br>
         <br>
         <strong>Comment en es-tu venue au développement web ?</strong><br>
 
-        J’ai travaillé avec des logiciels 3d de conception d’intérieur et j’ai crée mon site pro de décoratrice d’intérieur avec 
-        un interface no-code. Cette étape m’a passionné. Lorsque Pôle emploi m’a sollicité pour une formation en développement web, 
-        j’ai sauté sur l’occasion. J’ai suivi une formation dev web mais pas à la Wild. (un long silence pesant s’abat sur l’interview).<br>
+        J’ai travaillé avec des logiciels 3d de conception d’intérieur et j’ai crée mon site pro de décoratrice
+        d’intérieur avec
+        un interface no-code. Cette étape m’a passionné. Lorsque Pôle emploi m’a sollicité pour une formation en
+        développement web,
+        j’ai sauté sur l’occasion. J’ai suivi une formation dev web mais pas à la Wild. (un long silence pesant s’abat
+        sur l’interview).<br>
         <br>
-        <strong>Question plus sérieuse, Comment as-tu vécu l’intrusion de JS dans ta vie? Suis-tu un traitement pour ça?</strong><br>
+        <strong>Question plus sérieuse, Comment as-tu vécu l’intrusion de JS dans ta vie? Suis-tu un traitement pour
+            ça?</strong><br>
 
-        JS très bien vécu, j’aime beaucoup ce langage. Par contre PHP, c’est une relation plus difficile. Je ne lui parle pas, 
+        JS très bien vécu, j’aime beaucoup ce langage. Par contre PHP, c’est une relation plus difficile. Je ne lui
+        parle pas,
         et lui ne me parle pas non plus. Nous en sommes là lui est moi.<br>
         <br>
 
         <strong>Plutôt windows ou linux?</strong><br>
 
-        Polyamoureuse. Actuellement sur Windows, j’aime beaucoup linux. Je ne sais pas comment faire pour choisir sans blesser personne.<br>
+        Polyamoureuse. Actuellement sur Windows, j’aime beaucoup linux. Je ne sais pas comment faire pour choisir sans
+        blesser personne.<br>
         <br>
-        
+
         <strong>Quel wilder tu trouves le plus insupportable</strong><br>
 
         L’interviewer :) T’avais pas à poser cette question.<br>
         <br>
 
-        <strong>Quelle est ta vision du taff de développeur web à l’avenir, en particulier concernant les outils no ou low code de plus en plus pointus ?</strong><br>
+        <strong>Quelle est ta vision du taff de développeur web à l’avenir, en particulier concernant les outils no ou
+            low code de plus en plus pointus ?</strong><br>
 
-        On peut avoir des craintes lorsque l’on commence. Je les ai eues et je sais que vous pouvez les avoir, 
+        On peut avoir des craintes lorsque l’on commence. Je les ai eues et je sais que vous pouvez les avoir,
         mais je pense qu’il faut voir les choses un peu différemment.
-        Ces outils permettent aux dev de gagner du temps sur des tâches à faible valeur ajoutée et leur permettent de se concentrer 
+        Ces outils permettent aux dev de gagner du temps sur des tâches à faible valeur ajoutée et leur permettent de se
+        concentrer
         sur des tâches trop complexes pour pouvoir être traitées par ces outils no et low code.<br>
         <br>
 
         <strong>A ton sens quelles qualités/skills sont les plus importantes pour un dev ?</strong><br>
 
-        Le plus important selon moi est la curiosité essentielle à la veille techno, savoir chercher les infos utiles 
+        Le plus important selon moi est la curiosité essentielle à la veille techno, savoir chercher les infos utiles
         au métier et la souplesse dans l’apprentissage.
- 
-        En ce qui concerne la veille, il ne s’agit pas d’apprendre pour apprendre, mais bien cibler les domaines qui nous plaisent, 
+
+        En ce qui concerne la veille, il ne s’agit pas d’apprendre pour apprendre, mais bien cibler les domaines qui
+        nous plaisent,
         nous passionnent. Ainsi la veille est efficace et efficiente.
- 
-        Pour la souplesse dans l’apprentissage, l’évolution des différents langages est si rapide qu’il faut continuellement se former. 
+
+        Pour la souplesse dans l’apprentissage, l’évolution des différents langages est si rapide qu’il faut
+        continuellement se former.
         J’en veux pour preuve le cobol qui n’a cessé d’évoluer depuis sa création en 1875.<br>
         <br>
 
@@ -308,7 +331,7 @@
 
         Non. Tu as dû mal compter.<br>
         <br>
-        
+
         <strong>Sinon, pour finir, quel est le secret de Romain ? Tu sais, toi ?</strong><br>
 
         Je ne souhaite pas répondre à cette question …<br>
