--- a/index.html
+++ b/index.html
@@ -32,17 +32,19 @@
         <li class="carousel-item">
             <div class="card">
 
-                <img class="Image" src="assets/model.JPG" />
-                <h2 class="card-title"><a href="#trainingDay" class="buttoncarousel"><img
-                            src="assets/flèche.png"></a>Training Day: La meilleure façon de se préparer</h2>
+                <img class="Image" src="assets/model.JPG" alt="image article" />
+                <h2 class="card-title"><a href="#trainingDay" class="buttoncarousel"><img src="assets/flèche.png"
+                            alt="image article"></a>Training Day: La meilleure façon de se
+                    préparer</h2>
                 <div class="card-content">
                 </div>
             </div>
         </li>
         <li class="carousel-item">
             <div class="card">
-                <img class="Image" src="assets/workimg.jpg" />
-                <h2 class="card-title"> <a href="#work" class="buttoncarousel"><img src="assets/flèche.png"></a>Work: Le
+                <img class="Image" src="assets/workimg.jpg" alt="image article" />
+                <h2 class="card-title"> <a href="#work" class="buttoncarousel"><img src="assets/flèche.png"
+                            alt="imagearticle"></a>Work: Le
                     starter pack du Wilder</h2>
                 <div class="card-content">
 
@@ -51,18 +53,18 @@
         </li>
         <li class="carousel-item">
             <div class="card">
-                <img class="Image" src="assets/crane.jpg" />
-                <h2 class="card-title"><a href="#stories" class="buttoncarousel"><img
-                            src="assets/flèche.png"></a>Coiffure Lifestyle et Esthétique by Jessy</h2>
+                <img class="Image" src="assets/crane.jpg" alt="image article" />
+                <h2 class="card-title"><a href="#stories" class="buttoncarousel"><img src="assets/flèche.png"
+                            alt="image article"></a>Coiffure Lifestyle et Esthétique by Jessy</h2>
                 <div class="card-content">
                 </div>
             </div>
         </li>
         <li class="carousel-item">
             <div class="card">
-                <img class="Image" src="assets/reveil.jpg" />
-                <h2 class="card-title"><a href="#morning" class="buttoncarousel"><img
-                            src="assets/flèche.png"></i></a>Morning routine de Mounir</h2>
+                <img class="Image" src="assets/reveil.jpg" alt="image article" />
+                <h2 class="card-title"><a href="#morning" class="buttoncarousel"><img src="assets/flèche.png"
+                            alt="image article"></a>Morning routine de Mounir</h2>
                 <div class="card-content">
                 </div>
             </div>
@@ -79,7 +81,7 @@
         <h2>Training Day: La meilleure façon de se préparer</h2>
         <i class="fa-solid fa-angle-right"></i>
         <i class="fa-solid fa-chevron-down"></i>
-        <p class="credits"> Alexis durin - 06/10/2022</p>
+        <h5 class="credits"> Alexis durin - 06/10/2022</h5>
 
     </summary>
     <p>
@@ -113,15 +115,15 @@
     </p>
 
 </details>
-<details id="workDetails">
-    <summary id="work">
+<details>
+    <summary>
         <img class="articleimg" src="assets/workimg.jpg" alt="Image d'illustration d'article">
         <h3>
             Work: Le starter pack du Wilder
         </h3>
         <i class="fa-solid fa-angle-right"></i>
         <i class="fa-solid fa-chevron-down"></i>
-        <p class="credits"> Olivier Nou - 06/10/2022</p>
+        <h5 class="credits"> Olivier Nou - 06/10/2022</h5>
 
     </summary>
     <p><strong>Odyssey</strong><br>
@@ -157,7 +159,7 @@
         </h3>
         <i class="fa-solid fa-angle-right"></i>
         <i class="fa-solid fa-chevron-down"></i>
-        <p class="credits"> Rémi Lagreze - 06/10/2022</p>
+        <h5 class="credits"> Rémi Lagreze - 06/10/2022</h5>
 
     </summary>
 
@@ -202,7 +204,7 @@
         </h3>
         <i class="fa-solid fa-angle-right"></i>
         <i class="fa-solid fa-chevron-down"></i>
-        <p class="credits"> Lucie Froissart - 06/10/2022</p>
+        <h5 class="credits"> Lucie Froissart - 06/10/2022</h5>
 
     </summary>
     <p><strong>A la rédaction nous nous sommes posés des questions autour des routines matinales des wilders.
@@ -232,7 +234,7 @@
         </h3>
         <i class="fa-solid fa-angle-right"></i>
         <i class="fa-solid fa-chevron-down"></i>
-        <p class="credits"> Olivier Nou - 06/10/2022</p>
+        <h5 class="credits"> Olivier Nou - 06/10/2022</h5>
 
     </summary>
 
@@ -251,15 +253,15 @@
 
 </details>
 
-<details id="workDetails">
-    <summary id="work">
+<details>
+    <summary>
         <img class="articleimg" src="assets/Interview_Radio_4_(6840565867).jpeg" alt="Image d'illustration d'article">
         <h3>
             Interview Justine
         </h3>
         <i class="fa-solid fa-angle-right"></i>
         <i class="fa-solid fa-chevron-down"></i>
-        <p class="credits"> Edouard Tractere - 06/10/2022</p>
+        <h5 class="credits"> Edouard Tractere - 06/10/2022</h5>
 
     </summary>
     <p><strong>Avant de travailler dans l’IT tu faisais quoi?</strong><br>
@@ -338,8 +340,8 @@
         <br>
     </p>
 </details>
-<details id="workDetails">
-    <summary id="work">
+<details>
+    <summary>
         <img class="articleimg" src="assets/Interview_Radio_4_(6840565867).jpeg" alt="Image d'illustration d'article">
         <h3>
             Interview Romain
@@ -349,14 +351,16 @@
     </summary>
     <p><strong>Comment t’es venu l’amour du code ?</strong><br>
 
-        Un peu par hasard, à la sortie du lycée. Je me suis posé des questions quant à mon orientation future, 
+        Un peu par hasard, à la sortie du lycée. Je me suis posé des questions quant à mon orientation future,
         et le code s’est invité sans que je puisse dire précisément comment.<br>
         <br>
 
         <strong>Comment es-tu devenu formateur à la WildCodeSchool ?</strong><br>
 
-        Après avoir bossé à la faculté côté logiciel et en tant que dev dans une start-up, j’ai commencé la formation chez la concurrence. 
-        Un poste s’est ouvert il y a 4 ans à l’ouverture du campus de la wild à Reims et j’y use mes chaussettes depuis.<br>
+        Après avoir bossé à la faculté côté logiciel et en tant que dev dans une start-up, j’ai commencé la formation
+        chez la concurrence.
+        Un poste s’est ouvert il y a 4 ans à l’ouverture du campus de la wild à Reims et j’y use mes chaussettes
+        depuis.<br>
         <br>
 
         <strong>Tu dis avoir bossé côté logiciel, tu parles de C# ?</strong><br>
@@ -366,17 +370,20 @@
 
         <strong>Quel est ton langage de prédilection ?</strong><br>
 
-        Au début de ma carrière j’étais plus orienté logiciel. Et puis je me suis penché sur le web, 
-        en particulier JS qui m’a donné du fil à retordre au début, mais qui me plaît particulièrement dans JS c’est sa logique légèrement 
-        différente des autres et sa polyvalence, mais on pourrait dire ça d’à peu près tous les langages. Mais JS est mieux.<br>
+        Au début de ma carrière j’étais plus orienté logiciel. Et puis je me suis penché sur le web,
+        en particulier JS qui m’a donné du fil à retordre au début, mais qui me plaît particulièrement dans JS c’est sa
+        logique légèrement
+        différente des autres et sa polyvalence, mais on pourrait dire ça d’à peu près tous les langages. Mais JS est
+        mieux.<br>
         <br>
-        
+
         <strong>Pourquoi c’est mieux ?</strong><br>
 
         C’est mieux c’est tout.<br>
         <br>
 
-        <strong>X Niel a dit un jour s’être mis au code parce que lorsqu’il donnait des ordres aux humains ils ne l’écoutaient pas. Ça t’inspire quoi ?</strong><br>
+        <strong>X Niel a dit un jour s’être mis au code parce que lorsqu’il donnait des ordres aux humains ils ne
+            l’écoutaient pas. Ça t’inspire quoi ?</strong><br>
 
         C’est vrai que les ordinateurs écoutent beaucoup mieux que les humains.<br>
         <br>
@@ -388,14 +395,15 @@
 
         <strong>As-tu des projets en parallèle de la wild ?</strong><br>
 
-        Oui je suis un fidèle du Hacktober fest. J’ai actuellement un projet de classement de joueurs d’échecs et de notation de jeux de société.<br>
+        Oui je suis un fidèle du Hacktober fest. J’ai actuellement un projet de classement de joueurs d’échecs et de
+        notation de jeux de société.<br>
         <br>
 
         <strong>Tu joues aux échecs ?</strong><br>
 
         Non, je préfère le jeu de go. Les règles sont beaucoup plus simples.<br>
         <br>
-        
+
         <strong>Quel wilder est le plus insupportable?</strong><br>
 
         Le 3eme de la ligne à la session d’il y a 2 ans .<br>
@@ -408,7 +416,8 @@
 
         <strong>Un conseil à nous donner pour la sortie de la formation ?</strong><br>
 
-        Vous accrocher et persévérer. Garder la motivation et toujours s’exercer. Etre dev junior dans une boite n’est pas facile, et il faut tenir bon.<br>
+        Vous accrocher et persévérer. Garder la motivation et toujours s’exercer. Etre dev junior dans une boite n’est
+        pas facile, et il faut tenir bon.<br>
         <br>
 
         <strong>Ça fait plusieurs, non ?</strong><br>
@@ -435,7 +444,5 @@
 
 </body>
 
-
-</html>
 
 </html>
